startup/k8s/deployment-inventory.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment
  namespace: inventory-management-system
spec:
  replicas: 4
  selector:
    matchLabels:
      ims: inventory
  template:
    metadata:
      labels:
        ims: inventory
    spec:
      containers:
        - name: inventory
          image: localhost:5050/ims-inventory:latest
          ports:
            - containerPort: 8002
          readinessProbe:
            grpc:
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
          livenessProbe:
            grpc:
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
