startup/k8s/deployment-order.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: inventory-management-system
spec:
  replicas: 4
  selector:
    matchLabels:
      ims: order
  template:
    metadata:
      labels:
        ims: order
    spec:
      containers:
        - name: order
          image: localhost:5050/ims-order:latest
          ports:
            - containerPort: 8003
          readinessProbe:
            grpc:
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
          livenessProbe:
            grpc:
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
