startup/k8s/statefulset-order.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: order-postgres-statefulset
  namespace: inventory-management-system
spec:
  # DNS: <pod-name>.<service-name>.<namespace>.svc.cluster.local
  serviceName: order-headless-service # order-postgres-0.order-headless-service.default.svc.cluster.local
  replicas: 1
  selector:
    matchLabels:
      ims: order-postgres
  template:
    metadata:
      labels:
        ims: order-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.2
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-order-data
              mountPath: /var/lib/postgresql/data
              subPath: postgres # specific to postgres
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
  volumeClaimTemplates:
    - metadata:
        name: postgres-order-data
      spec:
        # "ReadWriteOnce" means only 1 Pod can read and write to the volume at a time.
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 500Mi # 500 MB
        # PVC will look for PVs with the same storageClassName to bind to
        storageClassName: ims-storage-class
