startup/k8s/clusterip-api-gateway.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-clusterip
  namespace: inventory-management-system
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    ims: api-gateway
