startup/k8s/clusterip-inventory.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory-clusterip
  namespace: inventory-management-system
spec:
  type: ClusterIP
  ports:
    - targetPort: 8002
      port: 8002
  selector:
    ims: inventory
