startup/k8s/clusterip-order.yml
apiVersion: v1
kind: Service
metadata:
  name: order-clusterip
  namespace: inventory-management-system
spec:
  type: ClusterIP
  ports:
    - targetPort: 8003
      port: 8003
  selector:
    ims: order
