startup/k8s/headless-service-inventory.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory-headless-service
  namespace: inventory-management-system
  labels:
    ims: inventory
spec:
  # `clusterIP: None` ensures that the service does not get assigned an IP address, which is important
  # for StatefulSet as it allows Pods to be accessed using their stable DNS names
  clusterIP: None # headless service
  selector:
    ims: inventory-mysql
  ports:
    - name: inventory-mysql-h
      port: 3306
      targetPort: 3306
