startup/k8s/headless-service-order.yml
apiVersion: v1
kind: Service
metadata:
  name: order-headless-service
  namespace: inventory-management-system
  labels:
    ims: order
spec:
  # `clusterIP: None` ensures that the service does not get assigned an IP address, which is important
  # for StatefulSet as it allows Pods to be accessed using their stable DNS names
  clusterIP: None # headless service
  selector:
    ims: order-postgres
  ports:
    - name: order-postgres-h
      port: 5432
      targetPort: 5432
