startup/k8s/kafka-broker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
  namespace: inventory-management-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
        - name: broker
          image: confluentinc/cp-kafka:7.3.0
          readinessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: inventory-management-system
spec:
  selector:
    app: broker
  ports:
    - name: kafka
      port: 9092
  type: ClusterIP
