startup/k8s/kafka-zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: inventory-management-system
spec:
  replicas: 1
  selector:
    matchLabels:
      ims: zookeeper
  template:
    metadata:
      labels:
        ims: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.3.0
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: inventory-management-system
spec:
  ports:
    - port: 2181
  selector:
    ims: zookeeper
