startup/k8s/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authify-ingress-resource
  namespace: authify
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost # Docker Desktop (Kubernetes)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-clusterip
                port:
                  number: 80
